Finished: basic functionality

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>XDD</title>
+  <title>Fullstack react + koa2</title>
 </head>
 <body>
-  <p>WWWWWW@</p>
+  <div id="app"></div>
+  <script src="./dest/bundle.js"></script>
 </body>
 </html>
